--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -5,27 +5,26 @@
 
 <body class="image-fluid"
  style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; background-image: url(https://images.unsplash.com/photo-1508717272800-9fff97da7e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);">
+
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <form class="login-form" action="/signup" method="POST">
-            <div class="form-control">
-                <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
-            </div>
+        <% if(errorMessage) { %>
+            <div class="user-message user-message-error"><%= errorMessage %></div>
+        <% } %>
+        <form class="login-form" action="/new-password" method="POST">
+           
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
-            <div class="form-control">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="confirmPassword">
-            </div>
+            <input type="hidden" name="userId" value="<%= userId %>">
+            <input type="hidden" name="passwordToken" value="<%= passwordToken %>">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Sign Up</button>
+            <button class="btn" type="submit">Update Password</button>
         </form>
-        
-        <footer style="text-align: center; margin-top: 10vw; color: black;">
+
+        <footer style="text-align: center; margin-top: 10vw; color: black; bottom: 0px;">
             <h5>© 2020 Matrimonial</h5>
           </footer>
     </main>
