--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,10 +3,15 @@
     <link rel="stylesheet" href="/css/auth.css">
 </head>
 
-<body>
+<body class="image-fluid"
+ style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; background-image: url(https://images.unsplash.com/photo-1508717272800-9fff97da7e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);">
+
    <%- include('../includes/navigation.ejs') %>
 
     <main>
+        <% if(errorMessage) { %>
+            <div class="user-message user-message-error"><%= errorMessage %></div>
+        <% } %>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
@@ -16,7 +21,15 @@
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
+            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
         </form>
+        <div class="centered">
+            <a href="/reset">Reset Password</a>
+        </div>
+
+        <footer style="text-align: center; margin-top: 10vw; color: black; bottom: 0px;">
+            <h5>© 2020 Matrimonial</h5>
+          </footer>
     </main>
 <%- include('../includes/end.ejs') %>
