--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -2,31 +2,34 @@
     <link rel="stylesheet" href="/css/cart.css">
     </head>
 
-    <body>
-        <%- include('../includes/navigation.ejs') %>
+    <body class="image-fluid"
+    style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; background-image: url(https://images.unsplash.com/photo-1508717146309-25a0019d0381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1951&q=80);">
+           <%- include('../includes/navigation.ejs') %>
         <main>
             <% if (products.length > 0) { %>
                 <ul class="cart__item-list">
                     <% products.forEach(p => { %>
                         <li class="cart__item">
-                            <h1><%= p.productId.title %></h1>
-                            <h2>Quantity: <%= p.quantity %></h2>
+                            <h1><%= p.productId.firstName %> <%= p.productId.lastName %></h1> 
                             <form action="/cart-delete-item" method="POST">
                                 <input type="hidden" value="<%= p.productId._id %>" name="productId">
-                                <button class="btn danger" type="submit">Delete</button>
+                                <button class="btn btn info" type="submit">Email</button>
+
+                                <button class="btn btn danger" type="submit">Remove</button>
                             </form>
                         </li>
                     <% }) %>
                 </ul>
                 <hr>
-                <div class="centered">
+                <!-- <div class="centered">
                     <form action="/create-order" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit" class="btn">Order Now!</button>
                     </form>
-                </div>
+                </div> -->
                 
             <% } else { %>
-                <h1>No Products in Cart!</h1>
+                <h1>No Favourite Profiles</h1>
             <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
