--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -2,25 +2,27 @@
     <link rel="stylesheet" href="/css/product.css">
     </head>
 
-    <body>
+    <body class="image-fluid"
+ style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; background-image: url(https://images.unsplash.com/photo-1567538096601-b3177180fa5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1049&q=80);">
+
         <%- include('../includes/navigation.ejs') %>
 
             <main>
                 <% if (prods.length > 0) { %>
-                    <div class="grid">
+                    <div class="grid";">
                         <% for (let product of prods) { %>
-                            <article class="card product-item">
+                            <article class="card product-item"  style = "background-color: #A3EBDF; border-radius: 10%;">
                                 <header class="card__header">
                                     <h1 class="product__title">
-                                        <%= product.title %>
+                                        <%= product.firstName %>&nbsp;<%=product.lastName%>
                                     </h1>
                                 </header>
-                                <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                                <div class="card__image" >
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.firstName %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$
-                                        <%= product.price %>
+                                    <h2 class="product__price">
+                                        <%= product.gender %>
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
@@ -36,7 +38,7 @@
                             <% } %>
                     </div>
                     <% } else { %>
-                        <h1>No Products Found!</h1>
+                        <h1>No Profiles Found!</h1>
                         <% } %>
             </main>
             <%- include('../includes/end.ejs') %>
