--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -21,12 +21,12 @@
                     <% }) %>
                 </ul>
                 <hr>
-                <!-- <div class="centered">
+                <div class="centered">
                     <form action="/create-order" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                         <button type="submit" class="btn">Order Now!</button>
                     </form>
-                </div> -->
+                </div>
                 
             <% } else { %>
                 <h1>No Favourite Profiles</h1>
