--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -17,7 +17,7 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl %>" alt="<%= product.firstName %>">
+                                    <img src="/<%= product.imageUrl %>" alt="<%= product.firstName %>">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">
