--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -3,23 +3,31 @@
     <link rel="stylesheet" href="/css/auth.css">
 </head>
 
-<body class="image-fluid"
- style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; background-image: url(https://images.unsplash.com/photo-1508717272800-9fff97da7e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);">
-
+<body>
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if(errorMessage) { %>
-            <div class="user-message user-message-error"><%= errorMessage %></div>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
-                <input type="email" name="email" id="email">
+                <input 
+                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>"
+                    type="email" 
+                    name="email" 
+                    id="email" 
+                    value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input 
+                    class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                    type="password" 
+                    name="password" 
+                    id="password" 
+                    value="<%= oldInput.password %>">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Login</button>
@@ -27,9 +35,5 @@
         <div class="centered">
             <a href="/reset">Reset Password</a>
         </div>
-
-        <footer style="text-align: center; margin-top: 10vw; color: black; bottom: 0px;">
-            <h5>© 2020 Matrimonial</h5>
-          </footer>
     </main>
 <%- include('../includes/end.ejs') %>
