--- a/views/auth/reset.ejs
+++ b/views/auth/reset.ejs
@@ -3,14 +3,12 @@
     <link rel="stylesheet" href="/css/auth.css">
 </head>
 
-<body class="image-fluid"
- style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; background-image: url(https://images.unsplash.com/photo-1508717272800-9fff97da7e8f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);">
-
+<body>
    <%- include('../includes/navigation.ejs') %>
 
     <main>
-        <% if(errorMessage) { %>
-            <div class="user-message user-message-error"><%= errorMessage %></div>
+        <% if (errorMessage) { %>
+            <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
         <form class="login-form" action="/reset" method="POST">
             <div class="form-control">
@@ -20,9 +18,5 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <button class="btn" type="submit">Reset Password</button>
         </form>
-
-        <footer style="text-align: center; margin-top: 10vw; color: black; bottom: 0px;">
-            <h5>© 2020 Matrimonial</h5>
-          </footer>
     </main>
 <%- include('../includes/end.ejs') %>
