--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -18,10 +18,10 @@
      class="img-fluid"
      style="background-repeat: no-repeat; background-attachment: fixed; background-position: center; background-size: cover; position: relative;" >
 
-     <div style = "top:60%; left:10%; position:absolute;background-color:#D5D0FF; width:50%; opacity:0.8;">
+     <!-- <div style = "top:60%; left:10%; position:absolute;background-color:#D5D0FF; width:50%; opacity:0.8;">
        <h1 >Best Matrimonial and match making Services. <br>Join Today to find someone special </h1>
      </div>
- </div>
+ </div> -->
                     
            
               <div class="card-deck"  style="margin-top: 3.5vw; margin-bottom: 5vw;">
@@ -65,7 +65,7 @@
                <div class="card" style="width: 100%; background: #FFBB55; margin-top: 3rem; margin-bottom: 3rem; ">
                 <div class="card-body">
                   <h5 class="card-title">Find Your Match</h5>
-                  <a href="/signup" class="btn btn-primary">Sign Up !</a>
+                  <a href="/login" class="btn btn-primary">Sign Up !</a>
                 </div>
               </div>
         
@@ -152,7 +152,7 @@
                <div class="card" style="width: 100%; background: #FFBB55; margin-top: 2rem; margin-bottom: 2rem; ">
                 <div class="card-body">
                   <h5 class="card-title">Find Your Match</h5>
-                  <a href="/signup" class="btn btn-primary">Sign Up !</a>
+                  <a href="/login" class="btn btn-primary">Sign Up !</a>
                 </div>
               </div>
        <footer style="text-align: center; margin-top: 10vw; color: black;">
