--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -15,6 +15,7 @@
             <h4>Gender : <%= product.gender %></h4>
             <h4>Religion : <%= product.religion %></h4>
             <h4>Date of Birth : <%= product.birth %></h4>
+            <h4>Date of Birth in number : <%= product.birth1 %></h4>
             <h4>Country : <%= product.country %></h4>
             <h4>Postal Code : <%= product.postal %></h4>
             <p>About user : <%= product.description %></p>
