--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -24,7 +24,10 @@
                                         <%= product.gender %>
                                     </h2>
                                     <p class="product__description">
-                                        <%= product.description %>
+                                        <%= product.country %>
+                                    </p>
+                                    <p class="product__description">
+                                        <%= product.religion %>
                                     </p>
                                 </div>
                                 <div class="card__actions">
